syntax = "proto3";

package pb.profile; 

option go_package = "./pb";

import "proto/google/api/annotations.proto";
import "google/protobuf/empty.proto";

message Profile {
    string id = 1;
    string name  = 2; 
    string email = 3;
    string password = 4; 
    bool admin = 5;
    // int64 created = 6;
    // int64 updated = 7;
}

message LoginWithBasicAuthRequest {
    string username = 1;
    string password = 2; 
}

// token to check user role 
message LoginWithBasicAuthResponse {
    string token = 1; 
}

message GetProfileByIDRequest {
    string id = 1; 
}

message GetProfileByUsernameRequest {
    string username = 1;
}

message GetProfileListResponse {
    repeated Profile profiles = 1;
}

message UpdateProfileRequest {
    string id = 1;
    string name = 2; 
    Profile profile = 3;
}

message DeleteProfileRequest {
    string id = 1; 
}

service Profiles {
    
    rpc SingIn(LoginWithBasicAuthRequest) returns (LoginWithBasicAuthResponse) {
        option (google.api.http) = {
            post: "/login"
            body: "*"
        };
    }

    rpc CreateProfile(Profile) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/profile/create"
            body: "*"
        };
    }

    rpc GetProfileByID(GetProfileByIDRequest) returns (Profile) {
        option (google.api.http) = {
            get: "/profile/{id}"
         };
    }

    rpc GetProfileByUsername(GetProfileByUsernameRequest) returns (Profile) {
        option (google.api.http) = {
            get: "/profile/{username}"
         };
    }

    rpc ListProfiles(google.protobuf.Empty) returns (GetProfileListResponse) {
        option (google.api.http) = {
            get: "/profile/profiles"
         };
    }

    rpc UpdateProfile(UpdateProfileRequest) returns (Profile) {
        option (google.api.http) = {
            post: "/profile/update"
            body: "*"
        };
    }

    rpc DeleteProfileByID(DeleteProfileRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/profile/{id}"
            body: "*"
        };
    }
}